# ros2_delta_robot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MOTION_CONTROL_ARCHITECTURE.md  PARAMETER_AUDIT.md  blabl.md  main.launch.py  robot_constants.py
archive/: circular_motion_generator.py  test_python_ruckig_waypoints.py  test_ruckig.py  test_ruckig_features  test_ruckig_features.cpp  test_waypoint_velocity.py  top-aa.py
archive/test_ruckig_sinus/: test_continuous_waypoints.py  test_simple_batch.py  test_sinus_waypoints.py
delta_robot_description/: CMakeLists.txt  package.xml
delta_robot_description/launch/: display.launch.py
delta_robot_description/meshes/: base.stl  base_top.stl  middle.stl
delta_robot_description/scripts/: generate_urdf.py
delta_robot_description/urdf/: modular_robot.xacro
endeffector/bendy/: modular_robot_follower.urdf  modular_robot_follower.xacro  robot_view.rviz  view_robot.launch.py
endeffector/grabby/: gripper_robot.urdf  gripper_robot.xacro  two_segment_gripper.urdf  two_segment_gripper.xacro  two_segment_view.rviz  view_gripper.launch.py  view_two_segment.launch.py
fabrik_ik_solver/: CMakeLists.txt  package.xml
fabrik_ik_solver/fabrik/: __init__.py  fabrik_constraints.py  fabrik_initialization.py  fabrik_iteration.py  fabrik_kinematics.py  fabrik_solver.py
fabrik_ik_solver/fabrik_ik_solver/: fabrik_ik_solver_node.py
fabrik_ik_solver/launch/: fabrik_ik_solver.launch.py
fabrik_ik_solver/msg/: FabrikVisualization.msg  MotorCommand.msg
interactive_tf_markers/: README.md  package.xml  setup.cfg  setup.py
interactive_tf_markers/interactive_tf_markers/: interactive_marker_tf_node.py  tf_listener_example.py
interactive_tf_markers/launch/: interactive_markers.launch.py  interactive_markers_with_rviz.launch.py
interactive_tf_markers/rviz/: interactive_markers.rviz
motor_to_joint_converter/: package.xml  setup.cfg  setup.py
motor_to_joint_converter/launch/: motor_to_joint_converter.launch.py
motor_to_joint_converter/motor_to_joint_converter/: motor_to_joint_converter_node.py
motor_trajectory_smoother/: package.xml  setup.cfg  setup.py
motor_trajectory_smoother/launch/: motor_trajectory_smoother.launch.py
motor_trajectory_smoother/motor_trajectory_smoother/: motor_trajectory_smoother_node.py
robot_config/: README.md  package.xml  setup.py
robot_config/robot_config/: __init__.py  motion.py  physical.py  system.py  visualization.py
rviz/: main.rviz
trajectory_tracker/: CMakeLists.txt  package.xml
trajectory_tracker/launch/: trajectory_tracker.launch.py  trajectory_tracker_with_rviz.launch.py
trajectory_tracker/msg/: Trajectory.msg  TrajectoryPoint.msg
trajectory_tracker/trajectory_tracker/: trajectory_tracker_node.py
