<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motor_trajectory_smoother</name>
  <version>0.0.0</version>
  <description>Ruckig-based trajectory smoother for 24-motor delta robot system</description>
  <maintainer email="yuuzena@gmail.com">yuuki</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>ruckig</depend>
  <depend>fabrik_ik_solver</depend>
  <depend>robot_config</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
